--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,14 @@ repository = "https://github.com/onur/cargo-license"
 
 [dependencies]
 cargo = "0.30"
-error-chain = "0.10"
+failure = "0.1"
 getopts = "0.2.14"
-toml = "0.2"
+toml = "0.4"
 ansi_term = "0.9"
+csv = "1"
+serde = "1"
+serde_derive = "1"
+serde_json = "1.0"
 
 [[bin]]
 name = "cargo-license"
