--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ readme = "README.md"
 repository = "https://github.com/onur/cargo-license"
 
 [dependencies]
-cargo = "0.30"
 failure = "0.1"
 getopts = "0.2.14"
 toml = "0.4"
@@ -17,6 +16,8 @@ csv = "1"
 serde = "1"
 serde_derive = "1"
 serde_json = "1.0"
+cargo_metadata = "0.6.4"
+
 
 [[bin]]
 name = "cargo-license"
