--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,22 @@
 name = "cargo-license"
 description = "Cargo subcommand to see license of dependencies"
 authors = ["Onur Aslan <onur@onur.im>"]
-version = "0.1.5"
+version = "0.2.0"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/onur/cargo-license"
 
 [dependencies]
-cargo = "0.30"
-error-chain = "0.10"
+failure = "0.1"
 getopts = "0.2.14"
-toml = "0.2"
+toml = "0.4"
 ansi_term = "0.9"
+csv = "1"
+serde = "1"
+serde_derive = "1"
+serde_json = "1.0"
+cargo_metadata = "0.6.4"
+
 
 [[bin]]
 name = "cargo-license"
