--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ csv = "1"
 serde = "1"
 serde_derive = "1"
 serde_json = "1.0"
-cargo_metadata = "0.6.4"
-
+cargo_metadata = "0.8.0"
+semver = "0.9.0"
 
 [[bin]]
 name = "cargo-license"
