--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 name = "cargo-license"
 description = "Cargo subcommand to see license of dependencies"
 authors = ["Onur Aslan <onur@onur.im>"]
-version = "0.2.0"
+version = "0.3.0"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/onur/cargo-license"
+edition = "2018"
 
 [dependencies]
 failure = "0.1"
@@ -16,8 +17,9 @@ csv = "1"
 serde = "1"
 serde_derive = "1"
 serde_json = "1.0"
-cargo_metadata = "0.8.0"
+cargo_metadata = "0.9.1"
 semver = "0.9.0"
+structopt = "0.3"
 
 [[bin]]
 name = "cargo-license"
