--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: rust
-addons:
-  apt:
-    sources:
-      - kalakris-cmake
-    packages:
-      - cmake
+script:
+  - cargo build --verbose --all
+  - cargo test --verbose --all
+  - cargo clippy -- -D clippy::all -W clippy::pedantic
