Install clippy with rustup

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: rust
 script:
+  - rustup component add clippy
   - cargo build --verbose --all
   - cargo test --verbose --all
   - cargo clippy -- -D clippy::all -W clippy::pedantic
