--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ repository = "https://github.com/onur/cargo-license"
 edition = "2018"
 
 [dependencies]
-failure = "0.1"
 getopts = "0.2.14"
 toml = "0.4"
 ansi_term = "0.9"
@@ -21,3 +20,4 @@ cargo_metadata = "0.9.1"
 semver = "0.9.0"
 structopt = "0.3"
 atty = "0.2"
+anyhow = "1"
