--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ serde_derive = "1"
 serde_json = "1"
 cargo_metadata = "0.14.0"
 semver = "1.0"
-structopt = "0.3"
+clap = { version =  "3.0.7", features = ["derive"] }
 atty = "0.2"
 anyhow = "1"
